--- a/dictionary/Base.lproj/LaunchScreen.storyboard
+++ b/dictionary/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +18,42 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NMx-Hp-WIq">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="reverso.png" translatesAutoresizingMaskIntoConstraints="NO" id="Jl2-0q-oYu">
+                                        <rect key="frame" x="0.0" y="294.5" width="375" height="78"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Jl2-0q-oYu" secondAttribute="height" multiplier="125:26" id="SEG-IF-q7q"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.21568627450980393" green="0.38039215686274508" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Jl2-0q-oYu" firstAttribute="width" secondItem="NMx-Hp-WIq" secondAttribute="width" id="M38-Zp-mBs"/>
+                                    <constraint firstItem="Jl2-0q-oYu" firstAttribute="centerY" secondItem="NMx-Hp-WIq" secondAttribute="centerY" id="OUU-hV-5cF"/>
+                                    <constraint firstItem="Jl2-0q-oYu" firstAttribute="centerX" secondItem="NMx-Hp-WIq" secondAttribute="centerX" id="P4e-JA-bc6"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="NMx-Hp-WIq" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="1i0-KE-Xrv"/>
+                            <constraint firstItem="NMx-Hp-WIq" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="N0o-vs-3uv"/>
+                            <constraint firstItem="NMx-Hp-WIq" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="UW3-gc-CbH"/>
+                            <constraint firstItem="NMx-Hp-WIq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oWl-xr-RNK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="reverso.png" width="360" height="78"/>
+    </resources>
 </document>
